--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,6 @@
 {
     "name": "gizburdt/lookbooq",
     "version": "0.1",
-    "dependencies": {
-        "bxslider-4":       "latest"
-    },
+    "dependencies": {},
     "private": "true"
 }
