--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
     "name": "gizburdt/lookbooq",
     "version": "0.1",
     "dependencies": {
+        "fancybox":       	"latest",
         "bxslider-4":       "latest"
     },
     "private": "true"
